# hipsort

./: 1.xml  1_1.xml  CMakeLists.txt  aa.prproj  hipsort  main.cpp  main.py  test2.xml  usage.txt
2/: hipsort2
2/result/: 1.MTS.txt  2.MTS.txt  3.MTS.txt  롱.MTS.txt
Adobe Premiere Pro Auto-Save/: 1-1.prproj  1-2.prproj  1_1-1.prproj  1_1-2.prproj  1_2-1.prproj  1_3-1.prproj  1_4-1.prproj  1_5-1.prproj  aa-1.prproj  hip-1.prproj  hip-2.prproj  hip-3.prproj  project_10-1.prproj  project_2-1.prproj  project_3-1.prproj  project_4-1.prproj  project_5-1.prproj  project_6-1.prproj  project_7-1.prproj  project_8-1.prproj  project_9-1.prproj  rrr-1.prproj  rrr_1-1.prproj  tttt-1.prproj  tttt_1-1.prproj  tttt_10-1.prproj  tttt_11-1.prproj  tttt_12-1.prproj  tttt_13-1.prproj  tttt_14-1.prproj  tttt_3-1.prproj  tttt_4-1.prproj  tttt_5-1.prproj  tttt_6-1.prproj  tttt_7-1.prproj  tttt_8-1.prproj
timeline/: project.xml  requirements.txt  template.xml  timecode.py
timeline/result/: 20180707_091948.mp4.txt  20180707_091954.mp4.txt  20180707_092005.mp4.txt
