cmake_minimum_required(VERSION 3.10)
project(hipsort)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
add_executable(hipsort main.cpp)
target_link_libraries( hipsort ${OpenCV_LIBS} /usr/local/Cellar/zbar/0.10_9/lib/libzbar.dylib stdc++fs)
